--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div style="margin-top: 50px;">
+  <div>
     <pre id="editor"></pre>
   </div>
    <script src="src/ace.js" type="text/javascript" charset="utf-8"></script>
